test/macro/fail/importBlankFrom.em
# Import malformed 2

# Arg: --ast2
# Expect failure

import a from
